# webkitgtk-android

./: .buildconfig  .gitignore  README.md  meson.build  meson_options.txt
.android-user/: adbkey  adbkey.pub  analytics.settings  debug.keystore
.android-user-home/: .android
android/: icon-foreground.xml  pixiewood-browser.xml  pixiewood-extra.cross  pixiewood-hello.xml
android/pixiewood-wraps/libsoup/: libsoup.wrap
docs/: a11y.md  android-build.md  freeze.md  guide-to-writing-plans.md  meson.build  run-valadoc.sh
docs/bugs/: 2026-07-21-modal-freeze-lags-dialog.md  2026-07-23-a11y-walk-gtk-thread-anr.md  2026-07-23-offscreen-a11y-empty-tree.md
docs/plans/: 1.0-ACTIVE-webkitgtk-android.md  1.0-summary.md  1.1-downloads.md  1.2-consumer-packaging.md
docs/valadoc-wiki/: index.valadoc
examples/browser/: host-a11y.vala  main.vala
examples/hello/: main.vala
lib/host/: webkitgtk-android-a11y.c  webkitgtk-android-bounds.c  webkitgtk-android-cookies.c  webkitgtk-android-downloads.c  webkitgtk-android-host-api.h  webkitgtk-android-host.c
lib/host/java/org/roojs/webkitgtk/android/: WebViewA11y.java  WebViewDownload.java  WebViewFreeze.java  WebViewHost.java  WebViewPaintProbe.java
lib/webkitgtkandroid/: AndroidAtspi.vala  CookieManager.vala  Download.vala  NetworkSession.vala  URIRequest.vala  WebView.vala  namespace.vala  network-session.vala  webview.vala
scripts/android/: adb-install-browser.sh  adb-install-hello.sh  android-meson-path.sh  build-browser-apk.sh  build-hello-apk.sh  ensure-meson.sh  gtk-android-builder.revision  install-sdk.sh  install-webview-java.sh  meson-for-pixiewood.sh
vapi/: webkitgtk-android-1.vapi
